@@ -7,5 +7,4 @@
   <include package="plone.restapi" />
 
   <adapter factory=".content.SerializeNewsListingBlockToJson" />
-  <adapter factory=".content.SerializeNewsFolderToJson" />
 </configure>
